--- a/client/user-ui/src/app/globals.css
+++ b/client/user-ui/src/app/globals.css
@@ -31,3 +31,13 @@ body {
     text-wrap: balance;
   }
 }
+/* fire fox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
